--- a/401.html
+++ b/401.html
@@ -32,7 +32,7 @@
 <body>
   <div class="protected-wrap">
     <div class="w-password-page w-form">
-      <form action="/.wf_auth" method="post" id="email-form" name="email-form" data-name="Email Form" class="protected-form w-password-page" data-wf-page-id="63a2893b4905010afb6c2c1a" data-wf-element-id="5c6ed14640fe31002ebf983d00000000000c">
+      <form action="/.wf_auth" method="post" id="email-form" name="email-form" data-name="Email Form" class="protected-form w-password-page"  action="https://formspree.io/f/xpzgpzng" data-wf-page-id="63a2893b4905010afb6c2c1a" data-wf-element-id="5c6ed14640fe31002ebf983d00000000000c">
         <h2 class="protected-heading">Protected Page</h2><input type="password" class="text-field w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" id="field"><input type="submit" value="Submit" data-wait="Please wait..." class="button w-password-page w-button">
         <div class="status-message cc-error-message w-password-page w-form-fail">
           <div>Incorrect password. Please try again.</div>
