--- a/pricing.html
+++ b/pricing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Aug 20 2023 03:46:55 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 20 2023 03:55:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63a2893b4905012feb6c2c26" data-wf-site="62d160b3a6d692215c144947">
 <head>
   <meta charset="utf-8">
@@ -41,12 +41,31 @@
 </style>
 </head>
 <body class="body-3">
-  <div class="navigation-bar">
-    <div class="container-11 w-container">
-      <div class="logo contact11">
-        <a href="index.html" class="brand w-nav-brand"><img src="images/256-.png" loading="lazy" width="50" height="50" alt="interaktive logo" class="logo1">
+  <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="nav-section w-nav">
+    <div class="nav-container w-container">
+      <div class="logo main">
+        <a href="index.html" class="brand w-nav-brand"><img width="50" height="50" src="images/256-.png" loading="lazy" alt="interaktive logo" class="logo1">
           <div class="text-block-24">INTERAKTIVE</div>
         </a>
+      </div>
+      <nav role="navigation" class="nav-menu w-nav-menu">
+        <a href="works.html" class="nav-link-4-copy-copy w-nav-link">Works</a>
+        <a href="pricing.html" aria-current="page" class="nav-link-4 w-nav-link w--current">Pricing</a>
+        <a href="#" class="nav-link-6 w-nav-link">FAQs</a>
+        <a href="contact.html" class="nav-link-5 w-nav-link">Contact Us</a>
+      </nav>
+      <div class="nav-menu-mobile">
+        <nav role="navigation" class="simple-nav-link-holder w-nav-menu">
+          <a href="works.html" class="simple-link pricing w-nav-link">Works</a>
+          <a href="pricing.html" aria-current="page" class="simple-link pricing w-nav-link w--current">Pricing</a>
+          <a href="#" class="simple-link faqs w-nav-link">FAQs</a>
+          <a href="#" class="simple-link w-nav-link">Contact Us</a>
+        </nav>
+        <div data-ix="arrow-left" class="simple-menu-button circular w-nav-button">
+          <div class="line-1 simple"></div>
+          <div class="line-2 simple"></div>
+          <div class="line-3 simple"></div>
+        </div>
       </div>
     </div>
   </div>
