--- a/works.html
+++ b/works.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Aug 20 2023 03:46:55 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 20 2023 03:55:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="64db6286d6c52bb4330988d1" data-wf-site="62d160b3a6d692215c144947">
 <head>
   <meta charset="utf-8">
@@ -41,12 +41,31 @@
 </style>
 </head>
 <body class="body-10">
-  <div class="navigation-bar">
-    <div class="container-11 w-container">
-      <div class="logo contact11">
-        <a href="index.html" class="brand w-nav-brand"><img src="images/256-.png" loading="lazy" width="50" height="50" alt="interaktive logo" class="logo1">
+  <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="nav-section w-nav">
+    <div class="nav-container w-container">
+      <div class="logo main">
+        <a href="index.html" class="brand w-nav-brand"><img width="50" height="50" src="images/256-.png" loading="lazy" alt="interaktive logo" class="logo1">
           <div class="text-block-24">INTERAKTIVE</div>
         </a>
+      </div>
+      <nav role="navigation" class="nav-menu w-nav-menu">
+        <a href="works.html" aria-current="page" class="nav-link-4-copy-copy w-nav-link w--current">Works</a>
+        <a href="pricing.html" class="nav-link-4 w-nav-link">Pricing</a>
+        <a href="#" class="nav-link-6 w-nav-link">FAQs</a>
+        <a href="contact.html" class="nav-link-5 w-nav-link">Contact Us</a>
+      </nav>
+      <div class="nav-menu-mobile">
+        <nav role="navigation" class="simple-nav-link-holder w-nav-menu">
+          <a href="works.html" aria-current="page" class="simple-link pricing w-nav-link w--current">Works</a>
+          <a href="pricing.html" class="simple-link pricing w-nav-link">Pricing</a>
+          <a href="#" class="simple-link faqs w-nav-link">FAQs</a>
+          <a href="#" class="simple-link w-nav-link">Contact Us</a>
+        </nav>
+        <div data-ix="arrow-left" class="simple-menu-button circular w-nav-button">
+          <div class="line-1 simple"></div>
+          <div class="line-2 simple"></div>
+          <div class="line-3 simple"></div>
+        </div>
       </div>
     </div>
   </div>
@@ -91,7 +110,7 @@
       <div class="div-block-30 top portfolio-title">
         <h1 class="heading-29">3D Rendering</h1>
       </div>
-      <div class="w-layout-grid grid-10"><img src="images/Cam-02_v2_A.jpg" loading="lazy" id="w-node-_3c449360-c49d-a6a4-9346-3174c6cdaa7a-330988d1" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 86vw, (max-width: 2564px) 78vw, 2000px" srcset="images/Cam-02_v2_A-p-500.jpg 500w, images/Cam-02_v2_A-p-800.jpg 800w, images/Cam-02_v2_A-p-1080.jpg 1080w, images/Cam-02_v2_A-p-1600.jpg 1600w, images/Cam-02_v2_A.jpg 2000w" alt="" class="rendering-elements"><img src="images/gallery_img6.jpg" loading="lazy" id="w-node-_67b5716b-478d-80ca-a02b-a90fc10468ee-330988d1" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 86vw, (max-width: 1315px) 76vw, 1000px" srcset="images/gallery_img6-p-500.jpg 500w, images/gallery_img6-p-800.jpg 800w, images/gallery_img6.jpg 1000w" alt="" class="rendering-elements"><img src="images/gallery_img2.jpg" loading="lazy" id="w-node-_9c8f51a9-0a10-7e0d-70b1-760e34f4f14e-330988d1" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 86vw, (max-width: 1315px) 76vw, 1000px" srcset="images/gallery_img2-p-500.jpg 500w, images/gallery_img2-p-800.jpg 800w, images/gallery_img2.jpg 1000w" alt="" class="rendering-elements"><img src="images/gallery_img3.jpg" loading="lazy" id="w-node-_09492240-338f-1e6a-334f-886c0ab150b0-330988d1" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 86vw, 78vw" srcset="images/gallery_img3-p-500.jpg 500w, images/gallery_img3-p-800.jpg 800w, images/gallery_img3-p-1080.jpg 1080w, images/gallery_img3-p-1600.jpg 1600w, images/gallery_img3.jpg 1920w" alt="" class="rendering-elements"><img src="images/gallery_img4.jpg" loading="lazy" id="w-node-ce99353c-b384-e92d-bd25-41cde9fb2dd3-330988d1" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 86vw, (max-width: 1315px) 76vw, 1000px" srcset="images/gallery_img4-p-500.jpg 500w, images/gallery_img4-p-800.jpg 800w, images/gallery_img4.jpg 1000w" alt="" class="rendering-elements"><img src="images/gallery_img5.jpg" loading="lazy" id="w-node-b1d43492-660c-3445-baba-f548a2b403a8-330988d1" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 86vw, (max-width: 1315px) 76vw, 1000px" srcset="images/gallery_img5-p-500.jpg 500w, images/gallery_img5-p-800.jpg 800w, images/gallery_img5.jpg 1000w" alt="" class="rendering-elements"></div>
+      <div class="w-layout-grid grid-10"><img src="images/Cam-02_v2_A.jpg" loading="lazy" id="w-node-_3c449360-c49d-a6a4-9346-3174c6cdaa7a-330988d1" sizes="100vw" srcset="images/Cam-02_v2_A-p-500.jpg 500w, images/Cam-02_v2_A-p-800.jpg 800w, images/Cam-02_v2_A-p-1080.jpg 1080w, images/Cam-02_v2_A-p-1600.jpg 1600w, images/Cam-02_v2_A.jpg 2000w" alt="" class="rendering-elements"><img src="images/gallery_img6.jpg" loading="lazy" id="w-node-_67b5716b-478d-80ca-a02b-a90fc10468ee-330988d1" sizes="100vw" srcset="images/gallery_img6-p-500.jpg 500w, images/gallery_img6-p-800.jpg 800w, images/gallery_img6.jpg 1000w" alt="" class="rendering-elements"><img src="images/gallery_img2.jpg" loading="lazy" id="w-node-_9c8f51a9-0a10-7e0d-70b1-760e34f4f14e-330988d1" sizes="100vw" srcset="images/gallery_img2-p-500.jpg 500w, images/gallery_img2-p-800.jpg 800w, images/gallery_img2.jpg 1000w" alt="" class="rendering-elements"><img src="images/gallery_img3.jpg" loading="lazy" id="w-node-_09492240-338f-1e6a-334f-886c0ab150b0-330988d1" sizes="100vw" srcset="images/gallery_img3-p-500.jpg 500w, images/gallery_img3-p-800.jpg 800w, images/gallery_img3-p-1080.jpg 1080w, images/gallery_img3-p-1600.jpg 1600w, images/gallery_img3.jpg 1920w" alt="" class="rendering-elements"><img src="images/gallery_img4.jpg" loading="lazy" id="w-node-ce99353c-b384-e92d-bd25-41cde9fb2dd3-330988d1" sizes="100vw" srcset="images/gallery_img4-p-500.jpg 500w, images/gallery_img4-p-800.jpg 800w, images/gallery_img4.jpg 1000w" alt="" class="rendering-elements"><img src="images/gallery_img5.jpg" loading="lazy" id="w-node-b1d43492-660c-3445-baba-f548a2b403a8-330988d1" sizes="100vw" srcset="images/gallery_img5-p-500.jpg 500w, images/gallery_img5-p-800.jpg 800w, images/gallery_img5.jpg 1000w" alt="" class="rendering-elements"></div>
     </div>
     <div class="w-layout-blockcontainer category-container w-container">
       <div class="div-block-30 top portfolio-title">
