--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Aug 20 2023 03:55:47 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 20 2023 06:23:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63a2893b490501f7766c2c13" data-wf-site="62d160b3a6d692215c144947">
 <head>
   <meta charset="utf-8">
@@ -75,16 +75,16 @@
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="works.html" class="nav-link-4-copy-copy w-nav-link">Works</a>
+        <a href="case-studies/industrial-boyd.html" class="nav-link-6 w-nav-link">Case Studies</a>
         <a href="pricing.html" class="nav-link-4 w-nav-link">Pricing</a>
-        <a href="#faqs" class="nav-link-6 w-nav-link">FAQs</a>
         <a href="contact.html" class="nav-link-5 w-nav-link">Contact Us</a>
       </nav>
       <div class="nav-menu-mobile">
         <nav role="navigation" class="simple-nav-link-holder w-nav-menu">
           <a href="works.html" class="simple-link pricing w-nav-link">Works</a>
+          <a href="case-studies/industrial-boyd.html" class="simple-link faqs w-nav-link">Case Studies</a>
           <a href="pricing.html" class="simple-link pricing w-nav-link">Pricing</a>
-          <a href="#faqs" class="simple-link faqs w-nav-link">FAQs</a>
-          <a href="#talktous" class="simple-link w-nav-link">Contact Us</a>
+          <a href="contact.html" class="simple-link w-nav-link">Contact Us</a>
         </nav>
         <div data-ix="arrow-left" class="simple-menu-button circular w-nav-button">
           <div class="line-1 simple"></div>
@@ -138,7 +138,7 @@ model-viewer#viewer {
 --poster-color: transparent;
 }
 </style>
-              <model-viewer id="viewer" disable-pan="" auto-rotate="" poster="https://puvanesh07.github.io/Interaktive_Files/shoe17.webp" src="https://interaktive10.github.io/hosted-assets/shoe-draco-reduced_texture-v2.glb" style="width: 100%; top: 0px" alt="A 3D model" preload="" ar="" ar-modes="quick-look scene-viewer webxr" shadow-intensity="1" exposure="2" interaction-prompt="auto" camera-controls="" autoplay="true" quick-look-browsers="safari chrome" camera-orbit="0deg 75deg auto" min-field-of-view="10deg" max-field-of-view="100deg" min-camera-orbit="auto 0deg 80%" max-camera-orbit="auto 180deg 100%">
+              <model-viewer id="viewer" disable-pan="" auto-rotate="" poster="https://interaktive10.github.io/hosted-assets/shoe_poster.webp" src="https://interaktive10.github.io/hosted-assets/shoe_website_hero.glb" ios-src="https://interaktive10.github.io/hosted-assets/IntWebMain3D.usdz" style="width: 100%; top: 0px" alt="A 3D model" preload="" ar="" ar-modes="quick-look scene-viewer webxr" shadow-intensity="1" exposure="2" interaction-prompt="auto" camera-controls="" autoplay="true" quick-look-browsers="safari chrome" camera-orbit="0deg 75deg auto" min-field-of-view="10deg" max-field-of-view="100deg" min-camera-orbit="auto 0deg 80%" max-camera-orbit="auto 180deg 100%">
               </model-viewer>
             </div>
           </div>
@@ -149,7 +149,7 @@ model-viewer#viewer {
   <section class="logos-title-small">
     <div class="container-30 w-container">
       <h1 class="heading-9">We&#x27;ve been around the block !<br></h1>
-      <h1 class="heading-9 _1200">Over 1,300 businesses of all sizes have trusted us<br></h1><img class="image-30" src="images/clients-mob-min.png" height="" alt="clients we worked with at interaktive" style="opacity:0" sizes="(max-width: 479px) 94vw, 100vw" data-w-id="2e1a4127-f7d2-0133-c879-694c1bbc2ce1" loading="lazy" srcset="images/clients-mob-min-p-500.png 500w, images/clients-mob-min-p-800.png 800w, images/clients-mob-min-p-1080.png 1080w, images/clients-mob-min-p-1600.png 1600w, images/clients-mob-min.png 2000w"><img src="images/final-logo.png" loading="lazy" style="opacity:0" data-w-id="014f6a3e-4cb8-e57a-d451-01c87b8caae7" srcset="images/final-logo-p-500.png 500w, images/final-logo-p-800.png 800w, images/final-logo-p-1080.png 1080w, images/final-logo.png 1200w" sizes="100vw" alt="clients" class="image-41">
+      <h1 class="heading-9 _1200">Over 1,300 businesses of all sizes have trusted us<br></h1><img class="image-30" src="images/clients-mob-min.png" height="" alt="clients we worked with at interaktive" style="opacity:0" sizes="(max-width: 479px) 94vw, 100vw" data-w-id="2e1a4127-f7d2-0133-c879-694c1bbc2ce1" loading="lazy" srcset="images/clients-mob-min-p-500.png 500w, images/clients-mob-min-p-800.png 800w, images/clients-mob-min-p-1080.png 1080w, images/clients-mob-min-p-1600.png 1600w, images/clients-mob-min.png 2000w"><img src="images/final-logo.png" loading="lazy" style="opacity:0" data-w-id="014f6a3e-4cb8-e57a-d451-01c87b8caae7" srcset="images/final-logo-p-500.png 500w, images/final-logo-p-800.png 800w, images/final-logo-p-1080.png 1080w, images/final-logo.png 1200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1263px) 95vw, 1200px" alt="clients" class="image-41">
     </div>
   </section>
   <section class="process-scroll-section">
@@ -492,8 +492,8 @@ model-viewer#viewer {
             <a href="pricing.html" class="link-4">Pricing</a>
           </div>
           <div class="div-block-63">
-            <a href="https://www.behance.net/interaktive10" class="link-block w-inline-block"><img class="image-33" src="images/behance.png" width="45" height="45" alt="" sizes="45px" data-w-id="12e61c83-14f5-ea2f-aecb-f5d24ed6172b" loading="lazy" srcset="images/behance-p-500.png 500w, images/behance.png 500w"></a>
-            <a href="https://vimeo.com/interaktive" class="link-block vimeo w-inline-block"><img class="image-32" src="images/vimeo.png" width="50" height="50" alt="" sizes="50px" data-w-id="862749b2-783a-1220-179a-7e6989cb7c83" loading="lazy" srcset="images/vimeo-p-500.png 500w, images/vimeo.png 500w"></a>
+            <a href="https://www.behance.net/interaktive10" class="link-block w-inline-block"><img src="images/behance.png" loading="lazy" width="45" height="45" srcset="images/behance-p-500.png 500w, images/behance.png 500w" sizes="45px" alt="" class="image-33"></a>
+            <a href="https://vimeo.com/interaktive" class="link-block vimeo w-inline-block"><img src="images/vimeo.png" loading="lazy" width="50" height="50" srcset="images/vimeo-p-500.png 500w, images/vimeo.png 500w" sizes="50px" alt="" class="image-32"></a>
           </div>
           <div class="contact-footer"></div>
         </div>
