--- a/privacy.html
+++ b/privacy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Aug 20 2023 03:55:47 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 20 2023 06:23:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63a2893b49050102fe6c2c27" data-wf-site="62d160b3a6d692215c144947">
 <head>
   <meta charset="utf-8">
@@ -268,8 +268,8 @@
             <a href="pricing.html" class="link-4">Pricing</a>
           </div>
           <div class="div-block-63">
-            <a href="https://www.behance.net/interaktive10" class="link-block w-inline-block"><img class="image-33" src="images/behance.png" width="45" height="45" alt="" sizes="45px" data-w-id="12e61c83-14f5-ea2f-aecb-f5d24ed6172b" loading="lazy" srcset="images/behance-p-500.png 500w, images/behance.png 500w"></a>
-            <a href="https://vimeo.com/interaktive" class="link-block vimeo w-inline-block"><img class="image-32" src="images/vimeo.png" width="50" height="50" alt="" sizes="50px" data-w-id="862749b2-783a-1220-179a-7e6989cb7c83" loading="lazy" srcset="images/vimeo-p-500.png 500w, images/vimeo.png 500w"></a>
+            <a href="https://www.behance.net/interaktive10" class="link-block w-inline-block"><img src="images/behance.png" loading="lazy" width="45" height="45" srcset="images/behance-p-500.png 500w, images/behance.png 500w" sizes="45px" alt="" class="image-33"></a>
+            <a href="https://vimeo.com/interaktive" class="link-block vimeo w-inline-block"><img src="images/vimeo.png" loading="lazy" width="50" height="50" srcset="images/vimeo-p-500.png 500w, images/vimeo.png 500w" sizes="50px" alt="" class="image-32"></a>
           </div>
           <div class="contact-footer"></div>
         </div>
