--- a/works.html
+++ b/works.html
@@ -121,7 +121,7 @@
           <div class="ar-elements-columns w-col w-col-4">
             <div class="ar-element w-embed w-iframe">
               <div style="position: relative; padding-bottom: 56.25%; height: 100%; overflow: hidden;">
-                <iframe src="https://metaviewer.azurewebsites.net/view?ApiKey=grinder" style="position: absolute; top:0; left: 0; width: 100%; height: 100%; border:0;"></iframe>
+                <iframe src="https://metaviewer.azurewebsites.net/view?ApiKey=horeca-glass-box" style="position: absolute; top:0; left: 0; width: 100%; height: 100%; border:0;"></iframe>
               </div>
             </div>
           </div>
