--- a/case-studies/industrial-boyd.html
+++ b/case-studies/industrial-boyd.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Aug 20 2023 06:23:03 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 20 2023 08:44:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="64466c941f692e79e75ab75b" data-wf-site="62d160b3a6d692215c144947">
 <head>
   <meta charset="utf-8">
@@ -64,7 +64,7 @@
     <div class="div-block-152">
       <h1 class="heading-23"><strong class="bold-text-34">INDUSTRIAL CASE STUDY</strong></h1><img src="../images/Boyd-trusted-innovation-540c-2022.png" loading="lazy" sizes="(max-width: 479px) 57vw, 27vw" srcset="../images/Boyd-trusted-innovation-540c-2022-p-500.png 500w, ../images/Boyd-trusted-innovation-540c-2022-p-800.png 800w, ../images/Boyd-trusted-innovation-540c-2022.png 1500w" alt="product configurators" class="image-65">
     </div>
-    <div class="div-block-146"><img src="../images/2328158908_industrial-machinery-3D-product-rendering-high-q_xl-beta-v2-2-2.png" loading="lazy" height="400" sizes="81vw" srcset="../images/2328158908_industrial-machinery-3D-product-rendering-high-q_xl-beta-v2-2-2-p-500.png 500w, ../images/2328158908_industrial-machinery-3D-product-rendering-high-q_xl-beta-v2-2-2.png 768w" alt="industrial 3d rendering" class="image-61"></div>
+    <div class="div-block-146"><img src="../images/2328158908_industrial-machinery-3D-product-rendering-high-q_xl-beta-v2-2-2.png" loading="lazy" height="400" sizes="(max-width: 479px) 100vw, 81vw" srcset="../images/2328158908_industrial-machinery-3D-product-rendering-high-q_xl-beta-v2-2-2-p-500.png 500w, ../images/2328158908_industrial-machinery-3D-product-rendering-high-q_xl-beta-v2-2-2.png 768w" alt="industrial 3d rendering" class="image-61"></div>
     <div>
       <h1 class="heading-24"><strong class="bold-text-35">Revolutionizing Boyd&#x27;s Product Visualization with Interactive 3D Solutions</strong></h1>
     </div>
@@ -148,12 +148,12 @@
         <div class="services-media-content w-col w-col-6">
           <div data-delay="4000" data-animation="slide" class="slider-3 w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="8" data-duration="500" data-infinite="true">
             <div class="mask-4 w-slider-mask">
-              <div class="slide-6 w-slide"><img src="../images/upscaledimage3-1.png" loading="lazy" srcset="../images/upscaledimage3-1-p-500.png 500w, ../images/upscaledimage3-1-p-800.png 800w, ../images/upscaledimage3-1.png 1000w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 73vw, (max-width: 991px) 37vw, 40vw" alt="" class="image-67"></div>
+              <div class="slide-6 w-slide"><img src="../images/upscaledimage3-1.png" loading="lazy" srcset="../images/upscaledimage3-1-p-500.png 500w, ../images/upscaledimage3-1-p-800.png 800w, ../images/upscaledimage3-1.png 1000w" sizes="100vw" alt="" class="image-67"></div>
               <div class="slide-4 w-slide"><img src="../images/001-1.jpg" loading="lazy" height="300" width="2000" srcset="../images/001-1-p-500.jpg 500w, ../images/001-1-p-800.jpg 800w, ../images/001-1-p-1080.jpg 1080w, ../images/001-1-p-1600.jpg 1600w, ../images/001-1-p-2000.jpg 2000w, ../images/001-1-p-2600.jpg 2600w, ../images/001-1-p-3200.jpg 3200w, ../images/001-1.jpg 4000w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 73vw, (max-width: 991px) 37vw, (max-width: 1919px) 40vw, 43vw" alt="" class="image-63"></div>
               <div class="slide-5 w-slide"><img src="../images/004.jpg" loading="lazy" sizes="100vw" srcset="../images/004-p-500.jpg 500w, ../images/004-p-800.jpg 800w, ../images/004-p-1080.jpg 1080w, ../images/004-p-1600.jpg 1600w, ../images/004-p-2000.jpg 2000w, ../images/004-p-2600.jpg 2600w, ../images/004-p-3200.jpg 3200w, ../images/004.jpg 4000w" alt="" class="image-69"></div>
-              <div class="slide-6 w-slide"><img src="../images/upscaledimage3.png" loading="lazy" srcset="../images/upscaledimage3-p-500.png 500w, ../images/upscaledimage3-p-800.png 800w, ../images/upscaledimage3.png 1000w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 73vw, (max-width: 991px) 37vw, 40vw" alt="" class="image-70"></div>
+              <div class="slide-6 w-slide"><img src="../images/upscaledimage3.png" loading="lazy" srcset="../images/upscaledimage3-p-500.png 500w, ../images/upscaledimage3-p-800.png 800w, ../images/upscaledimage3.png 1000w" sizes="100vw" alt="" class="image-70"></div>
               <div class="slide-6 w-slide"><img src="../images/upscaledimage5.png" loading="lazy" srcset="../images/upscaledimage5-p-500.png 500w, ../images/upscaledimage5-p-800.png 800w, ../images/upscaledimage5-p-1080.png 1080w, ../images/upscaledimage5.png 1100w" sizes="100vw" alt="" class="image-71"></div>
-              <div class="slide-6 w-slide"><img src="../images/upscaledimage3-2.png" loading="lazy" srcset="../images/upscaledimage3-2-p-500.png 500w, ../images/upscaledimage3-2-p-800.png 800w, ../images/upscaledimage3-2.png 1000w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 73vw, (max-width: 991px) 37vw, 40vw" alt="" class="image-72"></div>
+              <div class="slide-6 w-slide"><img src="../images/upscaledimage3-2.png" loading="lazy" srcset="../images/upscaledimage3-2-p-500.png 500w, ../images/upscaledimage3-2-p-800.png 800w, ../images/upscaledimage3-2.png 1000w" sizes="100vw" alt="" class="image-72"></div>
             </div>
             <div class="left-arrow-3 w-slider-arrow-left">
               <div class="icon-3 w-icon-slider-left"></div>
