--- a/works.html
+++ b/works.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Aug 20 2023 06:23:03 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Aug 20 2023 08:44:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="64db6286d6c52bb4330988d1" data-wf-site="62d160b3a6d692215c144947">
 <head>
   <meta charset="utf-8">
@@ -31,6 +31,7 @@
   gtag('js', new Date());
   gtag('config', 'UA-241658932-1');
 </script>
+  <script src="https://player.vimeo.com/api/player.js"></script>
   <style>
   a[href^="tel"],
   a[href^="mailto"] {
@@ -110,7 +111,7 @@
       <div class="div-block-30 top portfolio-title">
         <h1 class="heading-29">3D Rendering</h1>
       </div>
-      <div class="w-layout-grid grid-10"><img src="images/Cam-02_v2_A.jpg" loading="lazy" id="w-node-_3c449360-c49d-a6a4-9346-3174c6cdaa7a-330988d1" sizes="100vw" srcset="images/Cam-02_v2_A-p-500.jpg 500w, images/Cam-02_v2_A-p-800.jpg 800w, images/Cam-02_v2_A-p-1080.jpg 1080w, images/Cam-02_v2_A-p-1600.jpg 1600w, images/Cam-02_v2_A.jpg 2000w" alt="" class="rendering-elements"><img src="images/gallery_img6.jpg" loading="lazy" id="w-node-_67b5716b-478d-80ca-a02b-a90fc10468ee-330988d1" sizes="100vw" srcset="images/gallery_img6-p-500.jpg 500w, images/gallery_img6-p-800.jpg 800w, images/gallery_img6.jpg 1000w" alt="" class="rendering-elements"><img src="images/gallery_img2.jpg" loading="lazy" id="w-node-_9c8f51a9-0a10-7e0d-70b1-760e34f4f14e-330988d1" sizes="100vw" srcset="images/gallery_img2-p-500.jpg 500w, images/gallery_img2-p-800.jpg 800w, images/gallery_img2.jpg 1000w" alt="" class="rendering-elements"><img src="images/gallery_img3.jpg" loading="lazy" id="w-node-_09492240-338f-1e6a-334f-886c0ab150b0-330988d1" sizes="100vw" srcset="images/gallery_img3-p-500.jpg 500w, images/gallery_img3-p-800.jpg 800w, images/gallery_img3-p-1080.jpg 1080w, images/gallery_img3-p-1600.jpg 1600w, images/gallery_img3.jpg 1920w" alt="" class="rendering-elements"><img src="images/gallery_img4.jpg" loading="lazy" id="w-node-ce99353c-b384-e92d-bd25-41cde9fb2dd3-330988d1" sizes="100vw" srcset="images/gallery_img4-p-500.jpg 500w, images/gallery_img4-p-800.jpg 800w, images/gallery_img4.jpg 1000w" alt="" class="rendering-elements"><img src="images/gallery_img5.jpg" loading="lazy" id="w-node-b1d43492-660c-3445-baba-f548a2b403a8-330988d1" sizes="100vw" srcset="images/gallery_img5-p-500.jpg 500w, images/gallery_img5-p-800.jpg 800w, images/gallery_img5.jpg 1000w" alt="" class="rendering-elements"></div>
+      <div class="w-layout-grid grid-10"><img src="images/Cam-02_v2_A.jpg" loading="lazy" id="w-node-_3c449360-c49d-a6a4-9346-3174c6cdaa7a-330988d1" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 86vw, (max-width: 2564px) 78vw, 2000px" srcset="images/Cam-02_v2_A-p-500.jpg 500w, images/Cam-02_v2_A-p-800.jpg 800w, images/Cam-02_v2_A-p-1080.jpg 1080w, images/Cam-02_v2_A-p-1600.jpg 1600w, images/Cam-02_v2_A.jpg 2000w" alt="" class="rendering-elements"><img src="images/gallery_img6.jpg" loading="lazy" id="w-node-_67b5716b-478d-80ca-a02b-a90fc10468ee-330988d1" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 86vw, (max-width: 1315px) 76vw, 1000px" srcset="images/gallery_img6-p-500.jpg 500w, images/gallery_img6-p-800.jpg 800w, images/gallery_img6.jpg 1000w" alt="" class="rendering-elements"><img src="images/gallery_img2.jpg" loading="lazy" id="w-node-_9c8f51a9-0a10-7e0d-70b1-760e34f4f14e-330988d1" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 86vw, (max-width: 1315px) 76vw, 1000px" srcset="images/gallery_img2-p-500.jpg 500w, images/gallery_img2-p-800.jpg 800w, images/gallery_img2.jpg 1000w" alt="" class="rendering-elements"><img src="images/gallery_img3.jpg" loading="lazy" id="w-node-_09492240-338f-1e6a-334f-886c0ab150b0-330988d1" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 86vw, 78vw" srcset="images/gallery_img3-p-500.jpg 500w, images/gallery_img3-p-800.jpg 800w, images/gallery_img3-p-1080.jpg 1080w, images/gallery_img3-p-1600.jpg 1600w, images/gallery_img3.jpg 1920w" alt="" class="rendering-elements"><img src="images/gallery_img4.jpg" loading="lazy" id="w-node-ce99353c-b384-e92d-bd25-41cde9fb2dd3-330988d1" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 86vw, (max-width: 1315px) 76vw, 1000px" srcset="images/gallery_img4-p-500.jpg 500w, images/gallery_img4-p-800.jpg 800w, images/gallery_img4.jpg 1000w" alt="" class="rendering-elements"><img src="images/gallery_img5.jpg" loading="lazy" id="w-node-b1d43492-660c-3445-baba-f548a2b403a8-330988d1" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 86vw, (max-width: 1315px) 76vw, 1000px" srcset="images/gallery_img5-p-500.jpg 500w, images/gallery_img5-p-800.jpg 800w, images/gallery_img5.jpg 1000w" alt="" class="rendering-elements"></div>
     </div>
     <div class="w-layout-blockcontainer category-container w-container">
       <div class="div-block-30 top portfolio-title">
@@ -127,7 +128,7 @@
           </div>
           <div class="ar-elements-columns ar-video w-col w-col-4">
             <div class="ar-element ar-video w-embed w-iframe">
-              <div style="padding:101.11% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/829520278?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0; width:100%;height:100%;overflow:hidden" title="Augmented Reality Experience"></iframe></div>
+              <div style="padding:101.11% 0 0 0; position:relative;"><iframe src="https://player.vimeo.com/video/829520278?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Augmented Reality Experience"></iframe></div>
             </div>
           </div>
           <div class="ar-elements-columns bottom w-col w-col-4">
@@ -147,16 +148,16 @@
       <div class="category-title-text"></div>
       <div class="w-layout-grid grid-11">
         <div id="w-node-_342114a7-3b82-3db8-9454-3bc8dc866d85-330988d1" class="portfolio-animation w-embed w-iframe">
-          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/855261984?h=6ffe42c29d" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Promo animation - Monitor arm"></iframe></div>
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/855261984?badge=0&autopause=0&player_id=0&app_id=58479/embed" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen="" frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe></div>
         </div>
         <div id="w-node-a1d4f8d1-a4fa-69ca-b6ff-51efa1f09c3d-330988d1" class="portfolio-animation w-embed w-iframe">
-          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/552357421?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Exploded View Animation"></iframe></div>
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/552357421?badge=0&autopause=0&player_id=0&app_id=58479/embed" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen="" frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe></div>
         </div>
         <div id="w-node-e0a9b5a5-8857-fca4-aead-a1d969fd143d-330988d1" class="portfolio-animation w-embed w-iframe">
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/498860633?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Ear pods - 3D Modeling and Animation"></iframe></div>
         </div>
         <div id="w-node-_6decf658-ca97-d642-480b-b5469a6de8f4-330988d1" class="portfolio-animation w-embed w-iframe">
-          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/556216916?badge=0&autopause=0&player_id=0&app_id=58479/embed" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen="" frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe></div>
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/556216916?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Ergonomic chair - 3D Animation"></iframe></div>
         </div>
       </div>
     </div>
