--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
           <div class="line-3 simple"></div>
         </div>
       </div>
+      <style>
+        .nav-link-4-copy-copy, .nav-link-6, .simple-link.pricing, .simple-link.faqs {
+        display: none;
+      }
+      </style>
     </div>
   </div>
   <div class="hero-section">
