--- a/case-studies/industrial-boyd.html
+++ b/case-studies/industrial-boyd.html
@@ -130,7 +130,7 @@
   }
 </style>
           <div class="smart-city-widget-container">
-            <iframe src="https://smartcitytest.vercel.app/"></iframe>
+            <iframe src="https://www.interaktive.io/boyd_smart_city/index.html"></iframe>
           </div>
         </div>
       </div>
