--- a/case-studies/industrial-boyd.html
+++ b/case-studies/industrial-boyd.html
@@ -40,14 +40,14 @@
         </a>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="../works.html" class="nav-link-4-copy-copy w-nav-link">Works</a>
+        <!-- <a href="../works.html" class="nav-link-4-copy-copy w-nav-link">Works</a> -->
         <a href="../case-studies/industrial-boyd.html" aria-current="page" class="nav-link-6 w-nav-link w--current">Case Studies</a>
         <a href="../pricing.html" class="nav-link-4 w-nav-link">Pricing</a>
         <a href="../contact.html" class="nav-link-5 w-nav-link">Contact Us</a>
       </nav>
       <div class="nav-menu-mobile">
         <nav role="navigation" class="simple-nav-link-holder w-nav-menu">
-          <a href="../works.html" class="simple-link pricing w-nav-link">Works</a>
+          <!-- <a href="../works.html" class="simple-link pricing w-nav-link">Works</a> -->
           <a href="../case-studies/industrial-boyd.html" aria-current="page" class="simple-link faqs w-nav-link w--current">Case Studies</a>
           <a href="../pricing.html" class="simple-link pricing w-nav-link">Pricing</a>
           <a href="../contact.html" class="simple-link w-nav-link">Contact Us</a>
