updated pricing content

--- a/pricing.html
+++ b/pricing.html
@@ -163,7 +163,7 @@
           <li class="list-item-2">
             <div class="div-block-155"><img src="images/1024px-Google_Material_Design_check.svg.png" loading="lazy" sizes="(max-width: 1919px) 22.390625px, 1vw" srcset="images/1024px-Google_Material_Design_check.svg-p-500.png 500w, images/1024px-Google_Material_Design_check.svg-p-800.png 800w, images/1024px-Google_Material_Design_check.svg.png 1024w" alt="" class="image-68"></div>
             <div class="div-block-154">
-              <div class="text-block-92">Expert modelers, texture artists, animation and rendering artists will make sure that you get the desired outcome.</div>
+              <div class="text-block-92">Our expert modelers, texture artists, animation and rendering artists will make sure that you get the desired outcome.</div>
             </div>
           </li>
           <li class="list-item-2">
