--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ model-viewer#viewer {
         </div>
         <div class="column-14 w-col w-col-3 w-col-medium-3 w-col-small-3">
           <div class="div-block-50">
-            <a href="#" class="button-13 w-button">We&#x27;re hiring !</a>
+            <a href="contact.html" class="button-13 w-button">We&#x27;re hiring !</a>
           </div>
         </div>
       </div>
