--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   <!--  Google tag (gtag.js) - Google Analytics  -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-241658932-1">
 </script>
+<script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
