included works page

--- a/contact.html
+++ b/contact.html
@@ -50,14 +50,14 @@
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="works.html" class="nav-link-4-copy-copy w-nav-link">Works</a>
-        <a href="case-studies/industrial-boyd.html" class="nav-link-6 w-nav-link">Case Studies</a>
+        <!-- <a href="case-studies/industrial-boyd.html" class="nav-link-6 w-nav-link">Case Studies</a> -->
         <a href="pricing.html" class="nav-link-4 w-nav-link">Pricing</a>
         <a href="contact.html" aria-current="page" class="nav-link-5 w-nav-link w--current">Contact Us</a>
       </nav>
       <div class="nav-menu-mobile">
         <nav role="navigation" class="simple-nav-link-holder w-nav-menu">
           <a href="works.html" class="simple-link pricing w-nav-link">Works</a>
-          <a href="case-studies/industrial-boyd.html" class="simple-link faqs w-nav-link">Case Studies</a>
+          <!-- <a href="case-studies/industrial-boyd.html" class="simple-link faqs w-nav-link">Case Studies</a> -->
           <a href="pricing.html" class="simple-link pricing w-nav-link">Pricing</a>
           <a href="contact.html" aria-current="page" class="simple-link w-nav-link w--current">Contact Us</a>
         </nav>
@@ -68,7 +68,7 @@
         </div>
       </div>
       <style>
-        .nav-link-4-copy-copy, .nav-link-6, .simple-link.pricing, .simple-link.faqs {
+         .nav-link-6, .simple-link.faqs {
         display: none;
       }
       </style>
