--- a/works.html
+++ b/works.html
@@ -51,14 +51,14 @@
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="works.html" aria-current="page" class="nav-link-4-copy-copy w-nav-link w--current">Works</a>
-        <a href="case-studies/industrial-boyd.html" class="nav-link-6 w-nav-link">Case Studies</a>
+        <!-- <a href="case-studies/industrial-boyd.html" class="nav-link-6 w-nav-link">Case Studies</a> -->
         <a href="pricing.html" class="nav-link-4 w-nav-link">Pricing</a>
         <a href="contact.html" class="nav-link-5 w-nav-link">Contact Us</a>
       </nav>
       <div class="nav-menu-mobile">
         <nav role="navigation" class="simple-nav-link-holder w-nav-menu">
           <a href="works.html" aria-current="page" class="simple-link pricing w-nav-link w--current">Works</a>
-          <a href="case-studies/industrial-boyd.html" class="simple-link faqs w-nav-link">Case Studies</a>
+          <!-- <a href="case-studies/industrial-boyd.html" class="simple-link faqs w-nav-link">Case Studies</a> -->
           <a href="pricing.html" class="simple-link pricing w-nav-link">Pricing</a>
           <a href="contact.html" class="simple-link w-nav-link">Contact Us</a>
         </nav>
@@ -74,11 +74,11 @@
     <div class="portfolio-title itle-design">
       <div class="text-block-96">Our Creative Endeavours</div>
     </div>
-    <div class="w-layout-blockcontainer category-container first-element w-container">
-      <div class="div-block-30 top portfolio-title">
+    <div class="w-layout-blockcontainer category-container first-element w-container" style="display: none;">
+      <div class="div-block-30 top portfolio-title" >
         <h1 class="heading-29">Interactive 3D experiences</h1>
       </div>
-      <div class="interactive-element">
+      <div class="interactive-element" >
         <div class="html-embed-31 w-embed w-iframe">
           <style>
   .smart-city-widget-container {
@@ -148,7 +148,7 @@
       <div class="category-title-text"></div>
       <div class="w-layout-grid grid-11">
         <div id="w-node-_342114a7-3b82-3db8-9454-3bc8dc866d85-330988d1" class="portfolio-animation w-embed w-iframe">
-          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/855261984?badge=0&autopause=0&player_id=0&app_id=58479/embed" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen="" frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe></div>
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/498603318?badge=0&autopause=0&player_id=0&app_id=58479/embed" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen="" frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe></div>
         </div>
         <div id="w-node-a1d4f8d1-a4fa-69ca-b6ff-51efa1f09c3d-330988d1" class="portfolio-animation w-embed w-iframe">
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/552357421?badge=0&autopause=0&player_id=0&app_id=58479/embed" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen="" frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe></div>
