updated heading content

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ document.getElementById("viewer").style.height="440px";
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
   <script>
   var typed = new Typed(".typed-words", {
-  strings: ["3D models.", "3D Product Configurators.", "Augmented Reality.","Virtual Photoshoots."],
+  strings: ["3D models", "3D Product Configurators", "Augmented Reality","Virtual Photoshoots"],
   typeSpeed: 40,
   backSpeed: 25,
   backDelay: 600,
